--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </p>
           </div>
           <div class="hero-image">
-            <img src="assets/hero-flower.png" alt="Fresh Flowers" />
+            <img src="./assets/hero-flower.png" alt="Fresh Flowers" />
           </div>
         </div>
       </section>
