cards are added

--- a/index.html
+++ b/index.html
@@ -53,6 +53,106 @@
           </div>
         </div>
       </section>
+
+      <!-- Plants Section -->
+      <section class="plants">
+        <div class="plants-container">
+          <div class="section-header">
+            <h2>Our Plants</h2>
+            <p>Discover our beautiful collection of fresh flowers and plants</p>
+          </div>
+          <div class="plants-grid">
+            <div class="plant-card">
+              <img
+                src="assets/sample-flower-image.png"
+                alt="Beautiful Flower"
+              />
+              <h3>Red Rose Bouquet</h3>
+              <p class="price">$25.99</p>
+              <button class="add-to-cart" onclick="addToCart()">
+                Add to Cart
+              </button>
+            </div>
+            <div class="plant-card">
+              <img
+                src="assets/sample-flower-image.png"
+                alt="Beautiful Flower"
+              />
+              <h3>Pink Tulip Bundle</h3>
+              <p class="price">$19.99</p>
+              <button class="add-to-cart" onclick="addToCart()">
+                Add to Cart
+              </button>
+            </div>
+            <div class="plant-card">
+              <img
+                src="assets/sample-flower-image.png"
+                alt="Beautiful Flower"
+              />
+              <h3>White Lily Arrangement</h3>
+              <p class="price">$32.99</p>
+              <button class="add-to-cart" onclick="addToCart()">
+                Add to Cart
+              </button>
+            </div>
+            <div class="plant-card">
+              <img
+                src="assets/sample-flower-image.png"
+                alt="Beautiful Flower"
+              />
+              <h3>Sunflower Delight</h3>
+              <p class="price">$22.99</p>
+              <button class="add-to-cart" onclick="addToCart()">
+                Add to Cart
+              </button>
+            </div>
+            <div class="plant-card">
+              <img
+                src="assets/sample-flower-image.png"
+                alt="Beautiful Flower"
+              />
+              <h3>Mixed Wildflowers</h3>
+              <p class="price">$28.99</p>
+              <button class="add-to-cart" onclick="addToCart()">
+                Add to Cart
+              </button>
+            </div>
+            <div class="plant-card">
+              <img
+                src="assets/sample-flower-image.png"
+                alt="Beautiful Flower"
+              />
+              <h3>Orchid Collection</h3>
+              <p class="price">$45.99</p>
+              <button class="add-to-cart" onclick="addToCart()">
+                Add to Cart
+              </button>
+            </div>
+            <div class="plant-card">
+              <img
+                src="assets/sample-flower-image.png"
+                alt="Beautiful Flower"
+              />
+              <h3>Daisy Chain</h3>
+              <p class="price">$18.99</p>
+              <button class="add-to-cart" onclick="addToCart()">
+                Add to Cart
+              </button>
+            </div>
+            <div class="plant-card">
+              <img
+                src="assets/sample-flower-image.png"
+                alt="Beautiful Flower"
+              />
+              <h3>Carnation Mix</h3>
+              <p class="price">$24.99</p>
+              <button class="add-to-cart" onclick="addToCart()">
+                Add to Cart
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
