--- a/index.html
+++ b/index.html
@@ -153,6 +153,28 @@
           </div>
         </div>
       </section>
+
+      <!-- Plant Lover Section -->
+      <section class="plant-lover">
+        <div class="lover-container">
+          <div class="lover-image">
+            <img src="assets/flower-store.png" alt="Flower Store" />
+            <div class="trusted-badge">
+              <img src="assets/trusted-badge.png" alt="Trusted Badge" />
+            </div>
+          </div>
+          <div class="lover-content">
+            <h2>Flower & Plants Lover</h2>
+            <ul>
+              <li>Fresh flowers delivered daily</li>
+              <li>Expert care and handling</li>
+              <li>Wide variety of seasonal blooms</li>
+              <li>Satisfaction guaranteed</li>
+              <li>Professional arrangement services</li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
