--- a/index.html
+++ b/index.html
@@ -175,7 +175,80 @@
           </div>
         </div>
       </section>
+
+      <section class="latest">
+        <div class="container">
+          <header>
+            <div class="header-line"></div>
+            <h1><span class="orange-text">Latest</span> Deals</h1>
+            <p>
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </p>
+          </header>
+
+          <main class="deals-grid">
+            <div class="deal-card small-card">
+              <img src="./assets/deal-bloom.png" alt="Bloom Plant" />
+              <div class="overlay">
+                <p>50% Off | Bloom Plant</p>
+                <button>Shop Now</button>
+              </div>
+            </div>
+
+            <div class="deal-card large-card">
+              <img src="./assets/deal-zabo.png" alt="Zabo Plant" />
+              <div class="overlay">
+                <p>25% Off | Zabo Plant</p>
+                <button>Shop Now</button>
+              </div>
+            </div>
+
+            <div class="deal-card small-card">
+              <img src="./assets/deal-ana.png" alt="Ana Plant" />
+              <div class="overlay">
+                <p>30% Off | Ana Plant</p>
+                <button>Shop Now</button>
+              </div>
+            </div>
+          </main>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <!-- Newsletter Section -->
+    <section class="newsletter">
+      <div class="newsletter-container">
+        <h2>Join the colorful Bunch</h2>
+        <p>
+          Subscribe to our newsletter for the latest updates and special offers
+        </p>
+        <div class="newsletter-form">
+          <input type="email" placeholder="Enter your email address" />
+          <button type="submit">Subscribe</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-logo">
+          <img src="assets/logo.png" alt="Flower Shop Logo" />
+        </div>
+        <div class="footer-links">
+          <a href="#">Home</a>
+          <a href="#">Features</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+        </div>
+        <div class="social-icons">
+          <a href="#"><img src="assets/icon-facebook.png" alt="Facebook" /></a>
+          <a href="#"><img src="assets/icon-twitter.png" alt="Twitter" /></a>
+          <a href="#"><img src="assets/icon-linkedin.png" alt="LinkedIn" /></a>
+          <a href="#"><img src="assets/icon-youtube.png" alt="YouTube" /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
